--- a/react-18-11-redux/package.json
+++ b/react-18-11-redux/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.5",
     "shortid": "^2.2.15"
   },
   "scripts": {
